add a new Store for auth in => stors\AuthStore.js and add firebase and a sing in and up form.

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@
   list-style: none;
 }
 body {
+  height: 100vh;
   margin: 0;
   background-color: var(--color-background);
   font-family: "Roboto", sans-serif;
