--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 /**
  *? => Maybe add more colors to the white theme ?
  *TODO => Add more animations 
-*/
+paused
+ */
 
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
@@ -20,8 +21,8 @@
   --color-success: #22c55e;
   --color-warning: #f97316;
   --color-error: #ef4444;
-  --animate-slide-from-right: slideFromRight 0.5s ease-in-out forwards paused;
-  --animate-slide-to-left: slideToLeft 0.5s ease-in-out 0.6s forwards paused;
+  --animate-slide-from-right: slideFromRight 0.5s ease-in-out forwards;
+  --animate-slide-to-left: slideToLeft 0.5s ease-in-out 0.6s forwards;
   @keyframes slideFromRight {
     0% {
       left: 0%;
