feat: add dashboard page for logged-in users - users data are now saved in the firestore - add new var to theme in style.css - todo: add more colors to the light theme - fix: fix typos

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@ paused
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 @theme {
+  --text-tiny: 1.2rem;
   /* main colors*/
   --color-primary: #00c6d7;
   /* Dark theme colors*/
