feat: Add setting page and -the dashbord is a file now with the old dashbord renamed to index.vue

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ paused
   --color-on-primary: #ffffff;
   --color-secondary: #393e46;
   --color-on-secondary: #eeeeee;
+  --color-button-color: #4a5df9;
   /* light theme colors*/
 
   /* Semantic Colors */
