--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,7 @@ body {
   background-color: var(--color-surface);
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
+  text-transform: capitalize !important;
 }
 html.light body {
   background-color: white;
