Add features and styles in the last couple days: - add user can add delete tasks and can change the state of it - add a task folder for tasks components with other component that shows infos about the task - add utilities folder for helper functions namely  getUserData and handleClickOutside - add new image as placeholder it will be removed Later - delete old inputCom component file - add new actions and updated some in auth and task store - add new variables to css style - add new icons form fontAwesome

--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,8 @@ paused
   --color-secondary: #393e46;
   --color-on-secondary: #eeeeee;
   --color-button-color: #4a5df9;
+  --color-section: #222222;
+  --color-Clickable: #1dcd9f;
   /* light theme colors*/
 
   /* Semantic Colors */
