--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,3 @@
-/**
- *? => Maybe add more colors to the white theme ?
- *TODO => Add more animations 
-paused
- */
-
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 @theme {
@@ -29,27 +23,8 @@ paused
   --color-success: #22c55e;
   --color-warning: #f97316;
   --color-error: #ef4444;
-  --animate-slide-from-right: slideFromRight 0.5s ease-in-out forwards;
-  --animate-slide-to-left: slideToLeft 0.5s ease-in-out 0.6s forwards;
   --animate-scroll: scrolls 40s linear infinite;
-  @keyframes slideFromRight {
-    0% {
-      left: 0%;
-    }
-    100% {
-      display: none;
-      left: -100%;
-    }
-  }
-  @keyframes slideToLeft {
-    0% {
-      left: 110%;
-    }
-    100% {
-      left: 0%;
-      position: relative;
-    }
-  }
+
   @keyframes scrolls {
     0% {
       transform: translateX(0);
@@ -58,6 +33,9 @@ paused
       transform: translateX(calc(-256px * 10));
     }
   }
+}
+html {
+  scroll-behavior: smooth;
 }
 * {
   outline: none;
@@ -74,4 +52,7 @@ body {
 html.light body {
   background-color: var(--color-light-surface);
   color: var(--color-on-surface);
+}
+.sectionTittle {
+  font-size: clamp(2.5rem, 5vw, 5rem);
 }
